update kot/kor analysis
Signed-off-by: Atsuko Tominaga <Tominaga_Atsuko@phd.ceu.edu>

--- a/script/RNotebook/articulation.Rmd
+++ b/script/RNotebook/articulation.Rmd
@@ -1,19 +1,21 @@
 ---
-title: 'Analysis: The Sound of Teaching Music 1'
+title: 'Articulation Analysis: The Sound of Teaching Music 1'
 output:
   html_notebook: default
 editor_options: 
   chunk_output_type: inline
 ---
 
-##### Description: This is a summary of all analyses for articulation.
+Description: This is a summary of all analyses for articulation.
+
+- Last checked: 07/02/20
 
 # Outline - Articulation (KOT, KOR)
-### [Experimental Design](#design)
+## [Experimental Design](#design)
 
-### [Articulation](#kot-articulation)
+## [Articulation](#kot-articulation)
 
-#### KOT
+### KOT
 - Individual results
   + [All](#kot_art_ind_all)
   + [Trial by trial](#kot_art_ind_trial)
@@ -27,7 +29,7 @@ editor_options:
   
 - [Sequence plot](#sequence_art)
 
-#### KOR
+### KOR
 - Individual results
   + [All](#kor_art_ind_all)
   + [Trial by trial](#kor_art_ind_trial)
@@ -39,9 +41,9 @@ editor_options:
 - Order analysis (teaching/performing first?)
   + [All](#kor_art_order_group_all)
 
-### [Dynamics](#kot-dynamics)
+## [Dynamics](#kot-dynamics)
 
-#### KOT
+### KOT
 - Individual results
   + [All](#kot_dyn_ind_all)
   + [Trial by trial](#kot_dyn_ind_trial)
@@ -55,7 +57,7 @@ editor_options:
   
 - [Sequence plot](#sequence_dyn)
 
-#### KOR
+### KOR
 - Individual results
   + [All](#kor_dyn_ind_all)
   + [Trial by trial](#kor_dyn_ind_trial)
@@ -71,7 +73,7 @@ editor_options:
 - Independent variables: Condition (2 levels: teaching vs. performing) x Subcomponent (2 levels: legato vs. staccato / forte vs. piano)
 - Dependent variables: Key-Overlap Time (KOT), Key-Overlap Ratio (KOR)
 
-### Main predictions
+## Main predictions
 Participants will exaggerate legato and staccato more while teaching.
 
 ```{r setup, include = FALSE}
@@ -97,9 +99,6 @@ df_kot <- read.csv("./trimmed/data_kot.csv", header = T, sep = ",", dec = ".") #
 
 # SubNr as a factor
 df_ioi$SubNr <- as.factor(df_ioi$SubNr)
-
-# SubNr as a factor
-df_ioi$SubNr <- as.factor(df_ioi$SubNr)
 df_kot$SubNr <- as.factor(df_kot$SubNr)
 
 # For each individual, each block, each trial
@@ -110,7 +109,6 @@ ioi <- cbind(ioi[,1:5], as.data.frame(ioi[,6]))
 colnames(ioi) <- c("SubNr", "BlockNr", "TrialNr", "Condition", "Skill", "N", "Mean", "SD")
 
 # Calculate KOR for each interval
-
 df_kor <- data.frame()
 for (subnr in unique(df_kot$SubNr)){
   for (block in unique(df_kot$BlockNr[df_kot$SubNr == subnr])){
@@ -131,8 +129,8 @@ df_kot_dyn <- df_kot %>% dplyr::filter(Skill == "dynamics")
 df_kor_dyn <- df_kor %>% dplyr::filter(Skill == "dynamics")
 ```
 
-## Key-Overlap Time (KOT) - Articulation
-### 1. All - individual{#kot_art_ind_all}
+# Key-Overlap Time (KOT) - Articulation{#kot-articulation}
+## 1. All - individual{#kot_art_ind_all}
 - Average KOT for each participant.
 
 ```{r kot_art, echo = FALSE}
@@ -145,8 +143,8 @@ colnames(kot_art) <- c("SubNr", "Condition", "Skill", "Subcomponent", "N", "Mean
 print(kot_art)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
 
 ```{r kot_art_bar,  echo = FALSE}
@@ -159,7 +157,7 @@ p_kot_art <- ggplot(data = kot_art, aes(x = SubNr, y = Mean, fill = Condition)) 
 p_kot_art
 ```
 
-### 2. All - group{#kot_art_group_all}
+## 2. All - group{#kot_art_group_all}
 - Average KOT for each condition.
 - Hypothesis: Participants will exaggerate legato and staccato when teaching.
 
@@ -173,8 +171,8 @@ colnames(kot_art_all) <- c("Condition", "Skill", "Subcomponent", "N", "Mean", "S
 print(kot_art_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
 
 ```{r kot_art_all_bar, echo = FALSE}　
@@ -186,8 +184,7 @@ p_kot_art_all <- ggplot(data = kot_art_all, aes(x = Subcomponent, y = Mean, fill
 p_kot_art_all
 ```
 
-##### Box plot
-
+#### Box plot
 ```{r kot_art_all_box, echo = FALSE}
 p_kot_art_all_box <- ggplot(data = kot_art, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -196,8 +193,8 @@ p_kot_art_all_box <- ggplot(data = kot_art, aes(x = Subcomponent, y = Mean, fill
 p_kot_art_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality1, echo = FALSE}
 # Reduce unused factors
 kot_art$Subcomponent <- factor(kot_art$Subcomponent)
@@ -205,7 +202,7 @@ kot_art_norm <- by(kot_art$Mean, list(kot_art$Condition, kot_art$Subcomponent), 
 print(kot_art_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats1, echo = FALSE}
 kot_art_aov <- ezANOVA(
   data = subset(df_kot_art, df_kot_art$Subcomponent == "Legato" | df_kot_art$Subcomponent == "Staccato")
@@ -220,13 +217,13 @@ kot_art_aov$ANOVA$p <- round(kot_art_aov$ANOVA$p, 4)
 print(kot_art_aov$ANOVA)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats2, echo = FALSE}
 kot_art_aov_2 <- aov(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kot_art)
 print(summary(kot_art_aov_2))
 ```
 
-##### Post-hoc (direct comparison)
+#### Post-hoc (direct comparison)
 ```{r post-hoc1, echo = FALSE}
 kot_ttest_legato <- t.test(kot_art$Mean[kot_art$Condition == "performing" & kot_art$Subcomponent == "Legato"], kot_art$Mean[kot_art$Condition == "teaching" & kot_art$Subcomponent == "Legato"], paired = TRUE)
 kot_ttest_staccato <- t.test(kot_art$Mean[kot_art$Condition == "performing" & kot_art$Subcomponent == "Staccato"], kot_art$Mean[kot_art$Condition == "teaching" & kot_art$Subcomponent == "Staccato"], paired = TRUE)
@@ -240,7 +237,7 @@ print(kot_ttest_legato_cohend)
 print(kot_ttest_staccato_cohend)
 ```
 
-##### Post-hoc (pairwise t test)
+#### Post-hoc (pairwise t test)
 ```{r post-hoc2, echo = FALSE}
 # Create a group label for a post-hoc test
 kot_art$Group[kot_art$Condition == "performing" & kot_art$Subcomponent == "Legato"] <- "Performing-Legato" 
@@ -254,7 +251,7 @@ print(kot_art_pairwise)
 ```
 
 
-### 3. Trial by trial - individual{#kot_art_ind_trial}
+## 3. Trial by trial - individual{#kot_art_ind_trial}
 - Average KOT for each trial for each participant.
 
 ```{r kot_art_trial, echo = FALSE}
@@ -267,8 +264,8 @@ colnames(kot_art_trial) <- c("SubNr", "Condition", "Skill", "Subcomponent", "Tri
 print(kot_art_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r kot_art_trial_line_legato, echo = FALSE, fig.height = 8}
 p_kot_art_trial_legato <- ggplot(data = subset(kot_art_trial, kot_art_trial$Subcomponent == "Legato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -287,7 +284,7 @@ p_kot_art_trial_staccato <- ggplot(data = subset(kot_art_trial, kot_art_trial$Su
 p_kot_art_trial_staccato
 ```
 
-### 4. Trial by trial - group{#kot_art_group_trial}
+## 4. Trial by trial - group{#kot_art_group_trial}
 - Average KOT for each trial for each condition.
 
 ```{r kot_art_trial_all, echo = FALSE}
@@ -300,8 +297,8 @@ colnames(kot_art_trial_all) <- c("Condition", "Skill", "Subcomponent", "TrialNr"
 print(kot_art_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r kot_art_trial_all_line_legato, echo = FALSE}
@@ -323,8 +320,8 @@ p_kot_art_trial_all_staccato
 ```
 
 
-## Key-Overlap Ratio (KOR) - Articulation
-### 1. All - individual{#kor_art_ind_all}
+# Key-Overlap Ratio (KOR) - Articulation
+## 1. All - individual{#kor_art_ind_all}
 - Average KOR for each participant.
 
 ```{r kor_art, echo = FALSE}
@@ -337,8 +334,8 @@ colnames(kor_art) <- c("SubNr", "Condition", "Skill", "Subcomponent", "N", "Mean
 print(kor_art)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
 
 ```{r kor_art_bar,  echo = FALSE}
@@ -351,7 +348,7 @@ p_kor_art <- ggplot(data = kor_art, aes(x = SubNr, y = Mean, fill = Condition)) 
 p_kor_art
 ```
 
-### 2. All - group{#kor_art_group_all}
+## 2. All - group{#kor_art_group_all}
 - Average KOR for each condition.
 - Hypothesis: Participants will exaggerate legato and staccato when teaching.
 
@@ -365,8 +362,8 @@ colnames(kor_art_all) <- c("Condition", "Skill", "Subcomponent", "N", "Mean", "S
 print(kor_art_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
 
 ```{r kor_art_all_bar, echo = FALSE}　
@@ -378,8 +375,7 @@ p_kor_art_all <- ggplot(data = kor_art_all, aes(x = Subcomponent, y = Mean, fill
 p_kor_art_all
 ```
 
-##### Box plot
-
+#### Box plot
 ```{r kor_art_all_box, echo = FALSE}
 p_kor_art_all_box <- ggplot(data = kor_art, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -388,8 +384,8 @@ p_kor_art_all_box <- ggplot(data = kor_art, aes(x = Subcomponent, y = Mean, fill
 p_kor_art_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality2, echo = FALSE}
 # Reduce unused factors
 kor_art$Subcomponent <- factor(kor_art$Subcomponent)
@@ -397,7 +393,7 @@ kor_art_norm <- by(kor_art$Mean, list(kor_art$Condition, kor_art$Subcomponent), 
 print(kor_art_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats3, echo = FALSE}
 kor_art_aov <- ezANOVA(
   data = subset(df_kor_art, df_kor_art$Subcomponent == "Legato" | df_kor_art$Subcomponent == "Staccato")
@@ -412,13 +408,13 @@ kor_art_aov$ANOVA$p <- round(kor_art_aov$ANOVA$p, 4)
 print(kor_art_aov$ANOVA)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats4, echo = FALSE}
 kor_art_aov_2 <- aov(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kor_art)
 print(summary(kor_art_aov_2))
 ```
 
-##### Post-hoc (direct comparison)
+#### Post-hoc (direct comparison)
 ```{r post-hoc3, echo = FALSE}
 kor_ttest_legato <- t.test(kor_art$Mean[kor_art$Condition == "performing" & kor_art$Subcomponent == "Legato"], kor_art$Mean[kor_art$Condition == "teaching" & kor_art$Subcomponent == "Legato"], paired = TRUE)
 kor_ttest_staccato <- t.test(kor_art$Mean[kor_art$Condition == "performing" & kor_art$Subcomponent == "Staccato"], kor_art$Mean[kor_art$Condition == "teaching" & kor_art$Subcomponent == "Staccato"], paired = TRUE)
@@ -432,7 +428,7 @@ print(kor_ttest_legato_cohend)
 print(kor_ttest_staccato_cohend)
 ```
 
-##### Post-hoc (pairwise t test)
+#### Post-hoc (pairwise t test)
 ```{r post-hoc4, echo = FALSE}
 # Create a group label for a post-hoc test
 kor_art$Group[kor_art$Condition == "performing" & kor_art$Subcomponent == "Legato"] <- "Performing-Legato" 
@@ -445,7 +441,7 @@ kor_art_pairwise$p.value <- round(kor_art_pairwise$p.value, 4)
 print(kor_art_pairwise)
 ```
 
-### 3. Trial by trial - individual{#kor_art_ind_trial}
+## 3. Trial by trial - individual{#kor_art_ind_trial}
 - Average KOR for each trial for each participant.
 
 ```{r kor_art_trial, echo = FALSE}
@@ -458,8 +454,8 @@ colnames(kor_art_trial) <- c("SubNr", "Condition", "Skill", "Subcomponent", "Tri
 print(kor_art_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r kor_art_trial_line_legato, echo = FALSE, fig.height = 8}
 p_kor_art_trial_legato <- ggplot(data = subset(kor_art_trial, kor_art_trial$Subcomponent == "Legato"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -478,7 +474,7 @@ p_kor_art_trial_staccato <- ggplot(data = subset(kor_art_trial, kor_art_trial$Su
 p_kor_art_trial_staccato
 ```
 
-### 4. Trial by trial - group{#kor_art_group_trial}
+## 4. Trial by trial - group{#kor_art_group_trial}
 - Average KOR d for each trial for each condition.
 
 ```{r kor_art_trial_all, echo = FALSE}
@@ -491,8 +487,8 @@ colnames(kor_art_trial_all) <- c("Condition", "Skill", "Subcomponent", "TrialNr"
 print(kor_art_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r kor_art_trial_all_line_legato, echo = FALSE}
@@ -513,11 +509,8 @@ p_kor_art_trial_all_staccato <- ggplot(data = subset(kor_art_trial_all, kor_art_
 p_kor_art_trial_all_staccato
 ```
 
-###########
-###########
-
-## Key-Overlap Time (KOT) - Dynamics
-### 1. All - individual{#kot_dyn_ind_all}
+# Key-Overlap Time (KOT) - Dynamics{#kot-dynamics}
+## 1. All - individual{#kot_dyn_ind_all}
 - Average KOT for each participant.
 
 ```{r kot_dyn, echo = FALSE}
@@ -530,8 +523,8 @@ colnames(kot_dyn) <- c("SubNr", "Condition", "Skill", "Subcomponent", "N", "Mean
 print(kot_dyn)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
 
 ```{r kot_dyn_bar,  echo = FALSE}
@@ -544,7 +537,7 @@ p_kot_dyn <- ggplot(data = kot_dyn, aes(x = SubNr, y = Mean, fill = Condition)) 
 p_kot_dyn
 ```
 
-### 2. All - group{#kot_dyn_group_all}
+## 2. All - group{#kot_dyn_group_all}
 - Average KOT for each condition.
 
 ```{r kot_dyn_all, echo = FALSE}
@@ -557,8 +550,8 @@ colnames(kot_dyn_all) <- c("Condition", "Skill", "Subcomponent", "N", "Mean", "S
 print(kot_dyn_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
 
 ```{r kot_dyn_all_bar, echo = FALSE}　
@@ -570,7 +563,7 @@ p_kot_dyn_all <- ggplot(data = kot_dyn_all, aes(x = Subcomponent, y = Mean, fill
 p_kot_dyn_all
 ```
 
-##### Box plot
+#### Box plot
 
 ```{r kot_dyn_all_box, echo = FALSE}
 p_kot_dyn_all_box <- ggplot(data = kot_dyn, aes(x = Subcomponent, y = Mean, fill = Condition)) +
@@ -580,8 +573,8 @@ p_kot_dyn_all_box <- ggplot(data = kot_dyn, aes(x = Subcomponent, y = Mean, fill
 p_kot_dyn_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality3, echo = FALSE}
 # Reduce unused factors
 kot_dyn$Subcomponent <- factor(kot_dyn$Subcomponent)
@@ -589,7 +582,7 @@ kot_dyn_norm <- by(kot_dyn$Mean, list(kot_dyn$Condition, kot_dyn$Subcomponent), 
 print(kot_dyn_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats5, echo = FALSE}
 kot_dyn_aov <- ezANOVA(
   data = subset(df_kot_dyn, df_kot_dyn$Subcomponent == "Forte" | df_kot_dyn$Subcomponent == "Piano")
@@ -604,13 +597,13 @@ kot_dyn_aov$ANOVA$p <- round(kot_dyn_aov$ANOVA$p, 4)
 print(kot_dyn_aov$ANOVA)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats6, echo = FALSE}
 kot_dyn_aov_2 <- aov(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kot_dyn)
 print(summary(kot_dyn_aov_2))
 ```
 
-### 3. Trial by trial - individual{#kot_dyn_ind_trial}
+## 3. Trial by trial - individual{#kot_dyn_ind_trial}
 - Average KOT for each trial for each participant.
 
 ```{r kot_dyn_trial, echo = FALSE}
@@ -623,8 +616,8 @@ colnames(kot_dyn_trial) <- c("SubNr", "Condition", "Skill", "Subcomponent", "Tri
 print(kot_dyn_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r kot_dyn_trial_line_forte, echo = FALSE, fig.height = 8}
 p_kot_dyn_trial_forte <- ggplot(data = subset(kot_dyn_trial, kot_dyn_trial$Subcomponent == "Forte"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -643,7 +636,7 @@ p_kot_dyn_trial_piano <- ggplot(data = subset(kot_dyn_trial, kot_dyn_trial$Subco
 p_kot_dyn_trial_piano
 ```
 
-### 4. Trial by trial - group{#kot_dyn_group_trial}
+## 4. Trial by trial - group{#kot_dyn_group_trial}
 - Average KOT for each trial for each condition.
 
 ```{r kot_dyn_trial_all, echo = FALSE}
@@ -656,8 +649,8 @@ colnames(kot_dyn_trial_all) <- c("Condition", "Skill", "Subcomponent", "TrialNr"
 print(kot_dyn_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r kot_dyn_trial_all_line_forte, echo = FALSE}
@@ -678,8 +671,8 @@ p_kot_dyn_trial_all_piano <- ggplot(data = subset(kot_dyn_trial_all, kot_dyn_tri
 p_kot_dyn_trial_all_piano
 ```
 
-## Key-Overlap Ratio (KOR) - Dynamics
-### 1. All - individual{#kor_dyn_ind_all}
+# Key-Overlap Ratio (KOR) - Dynamics
+## 1. All - individual{#kor_dyn_ind_all}
 - Average KOR for each participant.
 
 ```{r kor_dyn, echo = FALSE}
@@ -692,8 +685,8 @@ colnames(kor_dyn) <- c("SubNr", "Condition", "Skill", "Subcomponent", "N", "Mean
 print(kor_dyn)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SD of the mean
 
 ```{r kor_dyn_bar,  echo = FALSE}
@@ -706,7 +699,7 @@ p_kor_dyn <- ggplot(data = kor_dyn, aes(x = SubNr, y = Mean, fill = Condition)) 
 p_kor_dyn
 ```
 
-### 2. All - group{#kor_dyn_group_all}
+## 2. All - group{#kor_dyn_group_all}
 - Average KOR for each condition.
 
 ```{r kor_dyn_all, echo = FALSE}
@@ -719,8 +712,8 @@ colnames(kor_dyn_all) <- c("Condition", "Skill", "Subcomponent", "N", "Mean", "S
 print(kor_dyn_all)
 ```
 
-#### Plot
-##### Bar chart
+### Plot
+#### Bar chart
 - Error bars show SEM of the mean
 
 ```{r kor_dyn_all_bar, echo = FALSE}　
@@ -732,8 +725,7 @@ p_kor_dyn_all <- ggplot(data = kor_dyn_all, aes(x = Subcomponent, y = Mean, fill
 p_kor_dyn_all
 ```
 
-##### Box plot
-
+#### Box plot
 ```{r kor_dyn_all_box, echo = FALSE}
 p_kor_dyn_all_box <- ggplot(data = kor_dyn, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -742,8 +734,8 @@ p_kor_dyn_all_box <- ggplot(data = kor_dyn, aes(x = Subcomponent, y = Mean, fill
 p_kor_dyn_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality4, echo = FALSE}
 # Reduce unused factors
 kor_dyn$Subcomponent <- factor(kor_dyn$Subcomponent)
@@ -751,7 +743,7 @@ kor_dyn_norm <- by(kor_dyn$Mean, list(kor_dyn$Condition, kor_dyn$Subcomponent), 
 print(kor_dyn_norm)
 ```
 
-##### Two-way ANOVA (ez)
+#### Two-way ANOVA (ez)
 ```{r stats7, echo = FALSE}
 kor_dyn_aov <- ezANOVA(
   data = subset(df_kor_dyn, df_kor_dyn$Subcomponent == "Forte" | df_kor_dyn$Subcomponent == "Piano")
@@ -766,13 +758,13 @@ kor_dyn_aov$ANOVA$p <- round(kor_dyn_aov$ANOVA$p, 4)
 print(kor_dyn_aov$ANOVA)
 ```
 
-##### Two-way ANOVA (aov)
+#### Two-way ANOVA (aov)
 ```{r stats8, echo = FALSE}
 kor_dyn_aov_2 <- aov(Mean ~ Condition*Subcomponent + Error(SubNr/(Condition*Subcomponent)), data = kor_dyn)
 print(summary(kor_dyn_aov_2))
 ```
 
-### 3. Trial by trial - individual{#kor_dyn_ind_trial}
+## 3. Trial by trial - individual{#kor_dyn_ind_trial}
 - Average KOR for each trial for each participant.
 
 ```{r kor_dyn_trial, echo = FALSE}
@@ -785,8 +777,8 @@ colnames(kor_dyn_trial) <- c("SubNr", "Condition", "Skill", "Subcomponent", "Tri
 print(kor_dyn_trial)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 ```{r kor_dyn_trial_line_forte, echo = FALSE, fig.height = 8}
 p_kor_dyn_trial_forte <- ggplot(data = subset(kor_dyn_trial, kor_dyn_trial$Subcomponent == "Forte"), aes(x = TrialNr, y = Mean, group = Condition, colour = Condition)) +
   geom_line() +
@@ -805,7 +797,7 @@ p_kor_dyn_trial_piano <- ggplot(data = subset(kor_dyn_trial, kor_dyn_trial$Subco
 p_kor_dyn_trial_piano
 ```
 
-### 4. Trial by trial - group{#kor_dyn_group_trial}
+## 4. Trial by trial - group{#kor_dyn_group_trial}
 - Average KOR for each trial for each condition.
 
 ```{r kor_dyn_trial_all, echo = FALSE}
@@ -818,8 +810,8 @@ colnames(kor_dyn_trial_all) <- c("Condition", "Skill", "Subcomponent", "TrialNr"
 print(kor_dyn_trial_all)
 ```
 
-#### Plot
-##### Line graph
+### Plot
+#### Line graph
 - Error bars show SEM of the mean
 
 ```{r kor_dyn_trial_all_line_forte, echo = FALSE}
@@ -840,13 +832,10 @@ p_kor_dyn_trial_all_piano <- ggplot(data = subset(kor_dyn_trial_all, kor_dyn_tri
 p_kor_dyn_trial_all_piano
 ```
 
-###########
-###########
-
-## KOT-Order-Articulation
+# KOT-Order-Articulation
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#kot_art_order_group_all}
+## 1. All{#kot_art_order_group_all}
 ```{r kot_art_order_all, echo = FALSE}
 # For each participant
 kot_art_order <- aggregate(KOT~SubNr*Condition*Skill*Subcomponent*Order, data = subset(df_kot_art, df_kot_art$Interval != 8 & df_kot_art$Interval != 16 & df_kot_art$Interval != 24 & df_kot_art$Interval != 41 & df_kot_art$Interval != 49 & df_kot_art$Interval != 57), FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x)), 4)})
@@ -877,7 +866,7 @@ p_kot_art_order_all <- ggplot(data = kot_art_order_all, aes(x = Subcomponent, y 
 p_kot_art_order_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r kot_art_order_all_box, echo = FALSE}
 p_kot_art_order_all_box <- ggplot(data = kot_art_order, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -887,8 +876,8 @@ p_kot_art_order_all_box <- ggplot(data = kot_art_order, aes(x = Subcomponent, y 
 p_kot_art_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality5, echo = FALSE}
 # Normality check
 kot_art_order$Subcomponent <- factor(kot_art_order$Subcomponent)
@@ -896,7 +885,7 @@ kot_art_order_norm <- by(kot_art_order$Mean, list(kot_art_order$Condition, kot_a
 print(kot_art_order_norm)
 ```
 
-##### Three-way ANOVA (ez)
+#### Three-way ANOVA (ez)
 ```{r stats9, echo = FALSE}
 kot_art_order_aov <- ezANOVA(
   data = df_kot_art
@@ -912,11 +901,10 @@ kot_art_order_aov$ANOVA$p <- round(kot_art_order_aov$ANOVA$p, 4)
 print(kot_art_order_aov)
 ```
 
-
-## KOR-Order-Articulation
+# KOR-Order-Articulation
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#kor_art_order_group_all}
+## 1. All{#kor_art_order_group_all}
 ```{r kor_art_order_all, echo = FALSE}
 # For each participant
 kor_art_order <- aggregate(KOR~SubNr*Condition*Skill*Subcomponent*Order, data = subset(df_kor_art, df_kor_art$Interval != 8 & df_kor_art$Interval != 16 & df_kor_art$Interval != 24 & df_kor_art$Interval != 41 & df_kor_art$Interval != 49 & df_kor_art$Interval != 57), FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x)), 4)})
@@ -947,7 +935,7 @@ p_kor_art_order_all <- ggplot(data = kor_art_order_all, aes(x = Subcomponent, y 
 p_kor_art_order_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r kor_art_order_all_box, echo = FALSE}
 p_kor_art_order_all_box <- ggplot(data = kor_art_order, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -957,8 +945,8 @@ p_kor_art_order_all_box <- ggplot(data = kor_art_order, aes(x = Subcomponent, y 
 p_kor_art_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality6, echo = FALSE}
 # Normality check
 kor_art_order$Subcomponent <- factor(kor_art_order$Subcomponent)
@@ -966,7 +954,7 @@ kor_art_order_norm <- by(kor_art_order$Mean, list(kor_art_order$Condition, kor_a
 print(kor_art_order_norm)
 ```
 
-##### Three-way ANOVA (ez)
+#### Three-way ANOVA (ez)
 ```{r stats10, echo = FALSE}
 kor_art_order_aov <- ezANOVA(
   data = df_kor_art
@@ -982,10 +970,10 @@ kor_art_order_aov$ANOVA$p <- round(kor_art_order_aov$ANOVA$p, 4)
 print(kor_art_order_aov)
 ```
 
-## KOT-Order-Dynamics
+# KOT-Order-Dynamics
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#kot_dyn_order_group_all}
+## 1. All{#kot_dyn_order_group_all}
 ```{r kot_dyn_order_all, echo = FALSE}
 # For each participant
 kot_dyn_order <- aggregate(KOT~SubNr*Condition*Skill*Subcomponent*Order, data = subset(df_kot_dyn, df_kot_dyn$Interval != 8 & df_kot_dyn$Interval != 16 & df_kot_dyn$Interval != 24 & df_kot_dyn$Interval != 41 & df_kot_dyn$Interval != 49 & df_kot_dyn$Interval != 57), FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x)), 4)})
@@ -1016,7 +1004,7 @@ p_kot_dyn_order_all <- ggplot(data = kot_dyn_order_all, aes(x = Subcomponent, y 
 p_kot_dyn_order_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r kot_dyn_order_all_box, echo = FALSE}
 p_kot_dyn_order_all_box <- ggplot(data = kot_dyn_order, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -1026,8 +1014,8 @@ p_kot_dyn_order_all_box <- ggplot(data = kot_dyn_order, aes(x = Subcomponent, y 
 p_kot_dyn_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality7, echo = FALSE}
 # Normality check
 kot_dyn_order$Subcomponent <- factor(kot_dyn_order$Subcomponent)
@@ -1035,7 +1023,7 @@ kot_dyn_order_norm <- by(kot_dyn_order$Mean, list(kot_dyn_order$Condition, kot_d
 print(kot_dyn_order_norm)
 ```
 
-##### Three-way ANOVA (ez)
+#### Three-way ANOVA (ez)
 ```{r stats11, echo = FALSE}
 kot_dyn_order_aov <- ezANOVA(
   data = df_kot_dyn
@@ -1051,10 +1039,10 @@ kot_dyn_order_aov$ANOVA$p <- round(kot_dyn_order_aov$ANOVA$p, 4)
 print(kot_dyn_order_aov)
 ```
 
-## KOR-Order-Dynamics
+# KOR-Order-Dynamics
 - Investigate whether there is any order effect of the conditions.
 
-### 1. All{#kor_dyn_order_group_all}
+## 1. All{#kor_dyn_order_group_all}
 ```{r kor_dyn_order_all, echo = FALSE}
 # For each participant
 kor_dyn_order <- aggregate(KOR~SubNr*Condition*Skill*Subcomponent*Order, data = subset(df_kor_dyn, df_kor_dyn$Interval != 8 & df_kor_dyn$Interval != 16 & df_kor_dyn$Interval != 24 & df_kor_dyn$Interval != 41 & df_kor_dyn$Interval != 49 & df_kor_dyn$Interval != 57), FUN = function(x){round(c(N = length(x), mean = mean(x), sd = sd(x)), 4)})
@@ -1085,7 +1073,7 @@ p_kor_dyn_order_all <- ggplot(data = kor_dyn_order_all, aes(x = Subcomponent, y 
 p_kor_dyn_order_all
 ```
 
-##### Box plot
+#### Box plot
 ```{r kor_dyn_order_all_box, echo = FALSE}
 p_kor_dyn_order_all_box <- ggplot(data = kor_dyn_order, aes(x = Subcomponent, y = Mean, fill = Condition)) +
   geom_boxplot() +
@@ -1095,8 +1083,8 @@ p_kor_dyn_order_all_box <- ggplot(data = kor_dyn_order, aes(x = Subcomponent, y 
 p_kor_dyn_order_all_box
 ```
 
-#### Statistics
-##### Normality check
+### Statistics
+#### Normality check
 ```{r normality8, echo = FALSE}
 # Normality check
 kor_dyn_order$Subcomponent <- factor(kor_dyn_order$Subcomponent)
@@ -1104,7 +1092,7 @@ kor_dyn_order_norm <- by(kor_dyn_order$Mean, list(kor_dyn_order$Condition, kor_d
 print(kor_dyn_order_norm)
 ```
 
-##### Three-way ANOVA (ez)
+#### Three-way ANOVA (ez)
 ```{r stats12, echo = FALSE}
 kor_dyn_order_aov <- ezANOVA(
   data = df_kor_dyn
@@ -1120,9 +1108,9 @@ kor_dyn_order_aov$ANOVA$p <- round(kor_dyn_order_aov$ANOVA$p, 4)
 print(kor_dyn_order_aov)
 ```
 
-## Sequence plot
-#### Articulation{#sequence_art}
-```{r seq_art, fig.width = 15, fig.height = 5, echo = FALSE}
+# Sequence plot
+## Articulation{#sequence_art}
+```{r seq_art, fig.width = 20, fig.height = 5, echo = FALSE}
 # For each individual
 kot_art_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_art,
                      FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
@@ -1146,8 +1134,8 @@ p_kot_art_seq <- ggplot(data = kot_art_seq_stats, aes(x = Interval, y = Mean, gr
 p_kot_art_seq
 ```
 
-#### Dynamics{#sequence_dyn}
-```{r seq_dyn, fig.width = 15, fig.height = 5, echo = FALSE}
+## Dynamics{#sequence_dyn}
+```{r seq_dyn, fig.width = 20, fig.height = 5, echo = FALSE}
 # For each individual
 kot_dyn_seq <- aggregate(KOT~SubNr*Condition*Skill*Interval, data = df_kot_dyn,
                      FUN = function(x){c(N = length(x), mean = mean(x), sd = sd(x))})
